--- a/src/component/dropdown.css
+++ b/src/component/dropdown.css
@@ -1,25 +1,50 @@
+.drop-down {
+    position: absolute;
+    width: 300px;
+
+    display:flex;
+    flex-direction: column;
+    gap: 0px;
+    padding:0px; 
+    margin:0px; 
+}
+
 .drop-context {
     margin: 0;
     padding: 0;
     display: flex;
     border: solid;
-    justify-content: center;
+    border-radius: 4px;
+    border-width: 1.75px;
+    height: 40px;
     align-items: center;
+    cursor: pointer;
+    justify-content: space-between;
+}
+
+.drop-context-selection {
+    margin: 0;
+    padding-left: 20px;
+}
+
+.drop-context-icon {
+    margin: 0;
+    padding-right: 20px;
 }
 
 .drop-menu {
-    position: absolute;
-    border-style: solid;
-    width: 300px;
-}
-
-.drop-down {
     list-style: none;
     height: 200px;
     overflow: auto;
-    border-style: solid;
     padding: 0;
+    margin: 0;
+    margin-top: 1px;
     list-style-position: inside;
+    border-style: hidden;
+    border-radius: 4px;
+    border-width: 1.75px;
+    background-color: #ffffff;
+    box-shadow: -2px 2px;
 }
 
 .drop-down li {
