--- a/src/component/dropdown.css
+++ b/src/component/dropdown.css
@@ -27,6 +27,10 @@
     padding-left: 20px;
 }
 
+.drop-context-tag {
+    opacity: 0.45;
+}
+
 .drop-context-icon {
     margin: 0;
     padding-right: 20px;
@@ -44,13 +48,16 @@
     border-radius: 4px;
     border-width: 1.75px;
     background-color: #ffffff;
-    box-shadow: -2px 2px;
+    box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
-.drop-down li {
+.drop-menu-item {
     padding: 10px 15px;
     border-bottom: 1px solid #cccccc;
-    text-align: left;
     background: #fbf6f6;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
     cursor: pointer;
 }
