--- a/src/dropdown/dropdown.css
+++ b/src/dropdown/dropdown.css
@@ -25,6 +25,7 @@
 .drop-context-selection {
     margin: 0;
     padding-left: 20px;
+    user-select: none;
 }
 
 .drop-context-tag {
@@ -54,10 +55,14 @@
 .drop-menu-item {
     padding: 10px 15px;
     border-bottom: 1px solid #cccccc;
-    background: #fbf6f6;
+    border-radius: 2px;
     text-align: left;
     display: flex;
     flex-direction: row;
     gap: 15px;
     cursor: pointer;
+}
+
+.selected {
+    background: #d6f6fa;
 }
