--- a/src/dropdown/dropdown.css
+++ b/src/dropdown/dropdown.css
@@ -52,7 +52,7 @@
     border-radius: 4px;
     border-width: 1.75px;
     background-color: #ffffff;
-    box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.15);
+    box-shadow: -5px 5px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
 .drop-menu-item {
